[package]
name = "num24"
version = "0.1.0"
edition = "2021"

[features]
default = []
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
serde_json = "1.0"

[[bench]]
name = "from"
harness = false
